# Stela

./: .env.example  .gitignore  .npmrc  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: privacy.html  privacy.md
public/dictionaries/: .gitkeep
scripts/: copy-dicts.mjs  env-from-google-json.mjs  gen-icon.mjs
src/: App.tsx  i18n.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  secrets.rs  state.rs
src-tauri/src/commands/: auth.rs  drive.rs  mod.rs  window.rs
src-tauri/src/google/: drive_api.rs  mod.rs  models.rs  oauth.rs
src/components/: AudioRecorder.tsx  ConfirmDialog.tsx  FirstRunLanguage.tsx  ImageDialog.tsx  NoteListItem.tsx  Settings.tsx  Sidebar.tsx  StatusBar.tsx  SuggestionMenu.tsx  Tabs.tsx  Titlebar.tsx  Toolbar.tsx  VideoDialog.tsx  WindowControls.tsx
src/drive/: cache.ts  driveClient.ts  media.ts  syncEngine.ts  types.ts
src/editor/: Editor.tsx
src/editor/extensions/: audio.tsx  chart.tsx  drawing.tsx  image.tsx  index.ts  markdown.ts  math.tsx  mermaid.tsx  resize.tsx  smoothCaret.ts  spellcheck.ts  tasks.ts  typingInk.ts  video.tsx
src/lib/: debounce.ts  ipc.ts  language.ts
src/spellcheck/: dictionaries.ts  proofreader.ts  spellcheck.worker.ts
src/styles/: caret.css  globals.css
src/theme/: ThemeProvider.tsx  useSystemTheme.ts
